refactor: 매직 상수 제거 및 테스트 검증 강화
예외 테스트 시, 에러 메시지도 검증